--- a/wwwroot/scss/lexus.css
+++ b/wwwroot/scss/lexus.css
@@ -9369,39 +9369,27 @@ readers do not read off random characters that represent icons */
     text-align: right;
     vertical-align: bottom; }
 
-.section-story-overview {
-  padding: 80px 0; }
-  .section-story-overview .image-container {
-    height: 335px;
-    position: relative;
-    background-position: center center;
-    background-size: cover;
-    box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
-    border-radius: .25rem; }
-    .section-story-overview .image-container.image-left {
-      z-index: 1; }
-    .section-story-overview .image-container.image-right {
-      z-index: 2; }
-  .section-story-overview p.blockquote {
-    width: 220px;
-    min-height: 180px;
-    text-align: left;
-    position: absolute;
-    top: 376px;
-    right: 155px;
-    z-index: 0;
-    border: 1px solid #e9ecef;
-    padding: 20px;
-    font-size: 1.1em;
-    line-height: 1.8; }
+.section-story-overview .image-container {
+  height: 335px;
+  position: relative;
+  background-position: center center;
+  background-size: cover;
+  box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
+  border-radius: .25rem;
+  z-index: 1; }
+
+.section-story-overview p.blockquote {
+  width: 220px;
+  min-height: 180px;
+  text-align: left;
+  position: absolute;
+  top: 376px;
+  right: 155px;
+  z-index: 0; }
 
 @media screen and (min-width: 768px) {
   .image-container.image-left {
-    margin-right: -100px; }
-  .image-container.image-right {
-    top: 80px;
-    margin-left: -100px;
-    margin-bottom: 130px; } }
+    margin-right: -100px; } }
 
 .shout {
   font-size: 7rem;
