Used Car styling

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,7 +49,11 @@
     <script src="~/js/jquery-2.2.4.min.js"></script>
 	<script src="~/js/popper.min.js"></script>
 	<script src="~/js/bootstrap.min.js"></script>
-   
+	<script src="~/js/main.js"></script>
+	<script src="~/js/jquery.mixitup.min.js"></script>
+     
+    
+     
     @RenderSection("Scripts", required: false)
     
     <script src="~/js/site.js" asp-append-version="true"></script>
@@ -66,6 +70,8 @@
 	    <feComposite in2="SourceAlpha" operator="in" />
 	  </filter>
 	</svg>
+   
+   
     
     <!-- Google Analytics -->
 	<script>
