--- a/wwwroot/scss/lexus.scss
+++ b/wwwroot/scss/lexus.scss
@@ -50,3 +50,9 @@ html,
 
 // Theme
 @import "theme"; 
+
+//Mixins
+@import "bootstrap/mixins/slanted-edges";
+
+//Pages
+@import "pages/pre-owned"; 
