--- a/Views/Shared/navigation.cshtml
+++ b/Views/Shared/navigation.cshtml
@@ -8,7 +8,14 @@
         <div class="collapse navbar-collapse" id="mainNav">
           <ul class="navbar-nav ml-auto">
 		      <li class="nav-item"><a class="nav-link" href="/components">Components</a></li>
-		      <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-search"></i></a></li>
+		      <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+		      <li class="nav-item"><a class="nav-link" href="/">Specials</a></li>
+              <li class="nav-item"><a class="nav-link" href="/">New Cars</a></li>
+		      <li class="nav-item"><a class="nav-link" href="/pre-owned">Used</a></li>
+		      <li class="nav-item"><a class="nav-link" href="/">Demo</a></li>
+		      <li class="nav-item"><a class="nav-link" href="/">Service</a></li>
+		      <li class="nav-item"><a class="nav-link" href="/">Dealers</a></li>
+		      
     	  </ul>
   		</div>
     </div>
