--- a/wwwroot/lexus.css
+++ b/wwwroot/lexus.css
@@ -476,7 +476,7 @@ mark,
   .blockquote-footer::before {
     content: "\2014 \00A0"; }
 
-.img-fluid {
+.img-fluid, .result-listing:first-child img {
   max-width: 100%;
   height: auto; }
 
