--- a/Views/Shared/result-listing.cshtml
+++ b/Views/Shared/result-listing.cshtml
@@ -6,15 +6,14 @@
                 <span>8</span>
             </div>
             <div>
-                <span>R189 000</span>   
-                <span>155 504 km</span> 
-                <span>2017</span>   
-                <span>Lexus IS</span>    
-                <span>250 6a 10(36A)</span>
-                <span>1-Owner Clean carfax!! Alloy wheels AM/FM/CD Player w/MP3/WMA Capability NuLuxe Trimmed Seat Material and Power moonroof. So few miles means it's like new. Gently used. Be sure to take advantage of owning this terrific 2013 Lexus CT. This car is nicely equipped with features such as Alloy wheels AM/FM/CD Player w/MP3/WMA Capability NuLuxe Trimmed Seat Material and Power moonroof. This is a great one-owner CT and it's ready for you to take home today. No sordid history on this one-owner gem. Magnussen one of a kind.FOR MORE INFO. CALL SALES DEPT.Our Pre-owned vehicles go through a comprehensive 161-point safety inspection/reconditioning THIS VEHICLE COMES WITH 3YR UPTO 100KMI TOTAL MILES IF PURCHASED LEXUS CERTIFIED and for your peace of mind we offer our unique 14-day Exchange policy (See Sales manager for details) to make your purchase decision easier.Disclaimer: All advertised vehicles are subject to actual dealer availability. Certain vehicles listed may not be available or may have different prices. Prices exclude state tax license document preparation fee smog fee and finance charges if applicable. Vehicle option and pricing are subject to change. Pricing and availability varies by dealership. Please check with your dealer for more information.OVER 140 PRE-OWNED VEHICLES AVAILABLE FOR SALE.</span>    
-                <span>Lexus Lynwood</span>     
+                <span>R189 000</span>
+                <span>155 504 km</span>
+                <span>2017</span>
+                <span>Lexus IS</span>
+                <span>250 6a</span>
+                <span>1-Owner Clean carfax!! Alloy wheels AM/FM/CD Player w/MP3/WMA Capability NuLuxe Trimmed Seat Material and Power moonroof. So few miles means it's like new. Gently used.</span>
+                <span>Lexus Lynwood</span>
             </div>
         </div>
     </a>
 </div>
-
