--- a/Views/Home/pre-owned-detail.cshtml
+++ b/Views/Home/pre-owned-detail.cshtml
@@ -2,21 +2,25 @@
     ViewData["Title"] = "Detail";
 }
 
-<div class="container-fluid">
-     <section class="section result-details">
-                <ul class="breadcrumb">
-                    <li class="breadcrumb-item">
-                      <a href="#"><i class="fa fa-home" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="breadcrumb-item">
-                      <a href="/pre-owned">Back to Search Results</a>
-                    </li>
-                    <li class="breadcrumb-item active">Lexus CT 200H PREMIUM 2015</li>
-                </ul>
+<section class="section result-details pb-0">
+               <div class="edge--bottom-detail"></div>
+                <div class="row m-2">
+                    <div class="col">
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item">
+                              <a href="#"><i class="fa fa-home" aria-hidden="true"></i></a>
+                            </li>
+                            <li class="breadcrumb-item">
+                              <a href="/pre-owned">Back to Search Results</a>
+                            </li>
+                            <li class="breadcrumb-item active">Lexus CT 200H</li>
+                        </ul>
+                    </div>
+                </div>
 
-        <div class="card mx-auto">
+        <div class="detail-card mx-auto">
             <div class="card-header">
-               <h1>Lexus CT 200H PREMIUM 2015</h1> <span>R 27,990</span>
+               <h1>Lexus CT 200H</h1> <span>R 27 990</span>
             </div>
            
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -31,56 +35,53 @@
                         <img class="d-block w-100" src="~/images/detail-img-1.jpg" alt="Third slide">
                     </div>
                 </div>
-                <a class="carousel-control-prev right-arrow" href="#carouselExampleControls" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon " aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-                <a class="carousel-control-next left-arrow" href="#carouselExampleControls" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
             </div>
-          
-            <div class="row align-self-center mt-3 thumbnail-img d-none d-md-block">
-                <div class="col">
-                    <img  src="~/images/lexus-model-thumb-1.jpg" alt="Card image cap">
-                    <img  src="~/images/lexus-model-thumb-2.jpg" alt="Card image cap">
-                    <img  src="~/images/lexus-model-thumb-3.jpg" alt="Card image cap">
-                    <img  src="~/images/lexus-model-thumb-4.jpg" alt="Card image cap">
-                    <img  src="~/images/lexus-model-thumb-5.jpg" alt="Card image cap">
-                </div>
-            </div>
-            <div class="row card-body">
-                <div class="col-12 col-md-7">             
-<!--                     <h5 class="card-title">VIEW ALL OUR 2015 LEXUS 200H PREMIUM CARS FOR SALE IN SOUTH AFRICA</h5>-->
-                        <p class="card-text">1.8L 4-Cylinder DOHC 16V VVT-i and Continuously Variable (ECVT). WOW! HYBRID! Call ASAP! Are you still driving around that old thing? Come on down today and get into this superb 2015 Lexus CT! Top-shelf.</p>
-                       <i class="fa fa-map-marker fa-2" aria-hidden="true"></i> 80 Trichardt Road, Ravenswood, Boksburg GP ZA, Gauteng
-                </div>
+            
 
-                <div class="col-12 col-md-5 mt-4 mt-md-0">
-                    <ul class="list-group">
-                        <li class="list-group-item"><p></p><span>Used</span></li>
-                        <li class="list-group-item"><p></p> <span>6784 km</span></li>
-                        <li class="list-group-item"><p></p> <span>2017</span></li>
-                        <li class="list-group-item"><p></p> <span>Brown</span></li>
-                    </ul> 
-                </div>
+            <div class="align-self-center mt-2 thumbnail-img d-none d-md-block">
+                <img  src="~/images/lexus-model-thumb-1.jpg" alt="Card image cap">
+                <img  src="~/images/lexus-model-thumb-2.jpg" alt="Card image cap">
+                <img  src="~/images/lexus-model-thumb-3.jpg" alt="Card image cap">
+                <img  src="~/images/lexus-model-thumb-4.jpg" alt="Card image cap">
+                <img  src="~/images/lexus-model-thumb-5.jpg" alt="Card image cap">            
             </div>
+
+            
+                 
+                  
+            <div class="car-specs mx-auto text-center">
+                <ul class="list-inline">
+                    <li class="list-inline-item"><p></p><span>6785km</span></li>
+                    <li class="list-inline-item"><p></p><span>2017</span></li>
+                    <li class="list-inline-item"><p></p><span>1.8</span></li>
+                    <li class="list-inline-item"><p></p><span>Automatic</span></li>
+                </ul>    
+            </div> 
+                   
+            <p class="px-5 my-5">1.8L 4-Cylinder DOHC 16V VVT-i and Continuously Variable (ECVT). WOW! HYBRID! Call ASAP! Are you still driving around that old thing? Come on down today and get into this superb 2015 Lexus CT! Top-shelf.</p>
+<!--            <i class="fa fa-map-marker fa-2" aria-hidden="true"></i> 80 Trichardt Road, Ravenswood, Boksburg GP ZA, Gauteng-->
+
+
         </div>
         <div class="card mx-auto mt-4 d-block d-md-none">
-            <div class="rightsidebar-sm">
+            <div class="result-contact-sm">
                 @Html.Partial("pre-owned-contact")
             </div>
         </div>
-        <div class="card mx-auto mt-4" style="">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.2479331381273!2d29.44078695104304!3d-23.91627308060442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ec6d78ad9037ab1%3A0xeb68fdd9b102e48a!2sLexus+Polokwane!5e0!3m2!1sen!2sza!4v1516025155145" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen>   
-            </iframe>       
+        <div class="mx-auto mt-4" style="">
+            <div id="map"></div>     
         </div>
     </section>
-</div>
 
-
-<aside class="rightsidebar d-none d-lg-block">
+<aside id="main-nav" class="result-contact d-none d-lg-block nav-padding">
     @Html.Partial("pre-owned-contact")
 </aside>
 
