--- a/Views/Shared/navigation.cshtml
+++ b/Views/Shared/navigation.cshtml
@@ -1,5 +1,6 @@
-﻿<nav id="main-nav" class="navbar navbar-expand-lg fixed-top bg-black navbar-dark nav-padding">
+﻿<nav id="main-nav" class="navbar navbar-expand-lg fixed-top navbar-dark nav-padding">
     <div class="container-fluid">
+        <img src="~/images/bidvest-logo.png" alt="" class="bidvest-logo">
         <div class="mask pseudo"><a class="navbar-brand" href="/" alt="Lexus"><img src="~/images/lexus-white.svg" /></a></div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -7,14 +8,15 @@
         
         <div class="collapse navbar-collapse" id="mainNav">
           <ul class="navbar-nav ml-auto">
-		      <li class="nav-item"><a class="nav-link" href="/components">Components</a></li>
-		      <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-		      <li class="nav-item"><a class="nav-link" href="/">Specials</a></li>
-              <li class="nav-item"><a class="nav-link" href="/">New Cars</a></li>
-		      <li class="nav-item"><a class="nav-link" href="/pre-owned">Used</a></li>
-		      <li class="nav-item"><a class="nav-link" href="/">Demo</a></li>
-		      <li class="nav-item"><a class="nav-link" href="/">Service</a></li>
-		      <li class="nav-item"><a class="nav-link" href="/">Dealers</a></li>
+<!--		      <li class="nav-item"><a class="nav-link" href="/components"><span>Components</span></a></li>-->
+		      <li class="nav-item"><a class="nav-link" href="/"><span>Home</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href=""><span>Specials</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href="/models"><span>Models</span></a></li>
+              <li class="nav-item"><a class="nav-link" href=""><span>New Cars</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href="/pre-owned"><span><span>Used</span></span></a></li>
+		      <li class="nav-item"><a class="nav-link" href=""><span>Demo</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href=""><span>Service</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href=""><span>Dealers</span></a></li>
 		      
     	  </ul>
   		</div>
