--- a/wwwroot/scss/bootstrap/_variables.scss
+++ b/wwwroot/scss/bootstrap/_variables.scss
@@ -34,6 +34,38 @@ $grays: map-merge((
   "900": $gray-900
 ), $grays);
 
+.bg-gray-1 { background:$gray-100}
+.bg-gray-2 { background:$gray-200}
+.bg-gray-3 { background:$gray-300}
+.bg-gray-4 { background:$gray-400}
+.bg-gray-5 { background:$gray-500}
+.bg-gray-6 { background:$gray-600}
+.bg-gray-7 { background:$gray-700}
+.bg-gray-8 { background:$gray-800}
+.bg-gray-9 { background:$gray-900}
+.bg-gray-10{ background:$gray-100}
+
+.gray-1 { color:$gray-100}
+.gray-2 { color:$gray-200}
+.gray-3 { color:$gray-300}
+.gray-4 { color:$gray-400}
+.gray-5 { color:$gray-500}
+.gray-6 { color:$gray-600}
+.gray-7 { color:$gray-700}
+.gray-8 { color:$gray-800}
+.gray-9 { color:$gray-900}
+.gray-10{ color:$gray-100}
+
+
+//Variables for Car Colours
+$morello-red:     #4A1A1A !default;
+$madder-red:      #A00914 !default;
+$graphite-black:  #0D0D04 !default;
+$mercury-grey:    #797A7E !default;
+$platinum-silver: #C8CCD4 !default;
+$sonic-quartz:    #F5f7F5 !default;
+
+
 $blue:    #428bca !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
@@ -449,7 +481,7 @@ $custom-control-indicator-box-shadow:   inset 0 .25rem .25rem rgba($black, .1) !
 $custom-control-indicator-disabled-bg:          $gray-200 !default;
 $custom-control-description-disabled-color:     $gray-600 !default;
 
-$custom-control-indicator-checked-color:        $white !default;
+$custom-control-indicator-checked-color:        $black !default;
 $custom-control-indicator-checked-bg:           theme-color("primary") !default;
 $custom-control-indicator-checked-box-shadow:   none !default;
 
@@ -604,7 +636,7 @@ $navbar-toggler-padding-x:          .75rem !default;
 $navbar-toggler-font-size:          $font-size-lg !default;
 $navbar-toggler-border-radius:      $btn-border-radius !default;
 
-$navbar-dark-color:                 rgba($white, .5) !default;
+$navbar-dark-color:                 rgba($white, .9) !default;
 $navbar-dark-hover-color:           rgba($white, .75) !default;
 $navbar-dark-active-color:          $white !default;
 $navbar-dark-disabled-color:        rgba($white, .25) !default;
@@ -853,7 +885,7 @@ $carousel-caption-color:            $white !default;
 $carousel-control-icon-width:       20px !default;
 
 $carousel-control-prev-icon-bg:     str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#{$carousel-control-color}' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E"), "#", "%23") !default;
-$carousel-control-next-icon-bg:     str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#{$carousel-control-color}' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E"), "#", "%23") !default;
+$carousel-control-next-icon-bg:     str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#{$carousel-control-color}' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E"), "#", "%23") !default; 
 
 $carousel-transition:               transform .6s ease !default;
 
