--- a/wwwroot/scss/bootstrap/bootstrap-grid.css
+++ b/wwwroot/scss/bootstrap/bootstrap-grid.css
@@ -16,6 +16,66 @@ html {
 *::after {
   box-sizing: inherit; }
 
+.bg-gray-1 {
+  background: #f8f9fa; }
+
+.bg-gray-2 {
+  background: #e9ecef; }
+
+.bg-gray-3 {
+  background: #dee2e6; }
+
+.bg-gray-4 {
+  background: #ced4da; }
+
+.bg-gray-5 {
+  background: #adb5bd; }
+
+.bg-gray-6 {
+  background: #868e96; }
+
+.bg-gray-7 {
+  background: #495057; }
+
+.bg-gray-8 {
+  background: #343a40; }
+
+.bg-gray-9 {
+  background: #212529; }
+
+.bg-gray-10 {
+  background: #f8f9fa; }
+
+.gray-1 {
+  color: #f8f9fa; }
+
+.gray-2 {
+  color: #e9ecef; }
+
+.gray-3 {
+  color: #dee2e6; }
+
+.gray-4 {
+  color: #ced4da; }
+
+.gray-5 {
+  color: #adb5bd; }
+
+.gray-6 {
+  color: #868e96; }
+
+.gray-7 {
+  color: #495057; }
+
+.gray-8 {
+  color: #343a40; }
+
+.gray-9 {
+  color: #212529; }
+
+.gray-10 {
+  color: #f8f9fa; }
+
 .container {
   width: 100%;
   padding-right: 15px;
