--- a/wwwroot/scss/bootstrap/mixins/_slanted-edges.scss
+++ b/wwwroot/scss/bootstrap/mixins/_slanted-edges.scss
@@ -1,3 +1,5 @@
+
+
 // mixin
 @mixin angle($pseudo, $flip: false, $angle: 1.5deg) {
   // Possible values for $pseudo are: before, after, both
@@ -79,6 +81,40 @@
   @include angle(after);
 }
 
+.edge--skew { 
+    transform: skewX(-20deg);
+    display: inline-block;
+    
+    span { 
+        transform: skewX(20deg);
+        display: inline-block;
+    } 
+   
+    a { 
+        transform: skewX(20deg);
+        display: inline-block;
+    }
+}
+
+.edge--bottom-detail {
+    @include angle(after);
+    transform: skewY(-2.5deg);
+    z-index: 0;
+    position: absolute;
+    width: 100%;
+    top: 18px;
+    left: 0;
+    height: 437px;
+    background: rgba(43,43,43,1);
+    background: -moz-linear-gradient(left, rgba(43,43,43,1) 0%, rgba(109,109,109,1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(43,43,43,1)), color-stop(100%, rgba(109,109,109,1)));
+    background: -webkit-linear-gradient(left, rgba(43,43,43,1) 0%, rgba(109,109,109,1) 100%);
+    background: -o-linear-gradient(left, rgba(43,43,43,1) 0%, rgba(109,109,109,1) 100%);
+    background: -ms-linear-gradient(left, rgba(43,43,43,1) 0%, rgba(109,109,109,1) 100%);
+    background: linear-gradient(to right, rgba(43,43,43,1) 0%, rgba(109,109,109,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2b2b2b', endColorstr='#6d6d6d', GradientType=1 );
+}
+
 .edge--bottom--reverse {
   @include angle(after, true);
 }
@@ -114,3 +150,6 @@
 .-green {
   background: #5e9b42;
 }
+
+
+
