--- a/wwwroot/scss/theme.scss
+++ b/wwwroot/scss/theme.scss
@@ -1,31 +1,69 @@
 
+
+
 // NAVBAR
 #main-nav.navbar {
-	transition: $transition-base; 
+    padding:0;
+    height: 65px;
+//	transition: $transition-base; 
+    background: $gray-900;
 	z-index: 1040;
 	&.nav-padding {
-		padding-top: 20px;
-		padding-bottom: 20px;
+//        padding-top: 20px;
+//        padding-bottom: 20px;
 	}
 	.navbar-brand {
 		img {
 			height: 30px;
+            margin-left:140px;
 		}
 	}
-    
+    .navbar-nav { 
+        align-items: center;
+    }
     .nav-item {
-        &.active {
-//            -moz-transform: rotate(20deg); 
-//            -o-transform: rotate(20deg); 
-//            -webkit-transform: rotate(20deg); 
-//            background: #5c5c5c; 
-//            margin-bottom: -100px; 
-//            margin-top: -70px; 
-//            height: 150px;
-        }    
+        &.active {     
+            background: $gray-700; 
+            transform: skew(-20deg);
+            a {
+                transform: skew(20deg);
+                display: flex;
+                align-items: center;
+                padding: 22px 10px;
+                font-weight: bold;
+                width: auto;
+            }
+            a:hover {
+                background: transparent;    
+            }  
+        } 
+      
+        a:hover {
+            transform: skew(-20deg);
+            padding: 22px 10px;
+            transition: all 0s cubic-bezier(.25,.8,.25,1);   
+        }
+        
+        a {
+            transform: none; 
+            padding: 22px 10px;
+            transition: all 0s cubic-bezier(.25,.8,.25,1);  
+        }
+        a:hover span  {
+            transform: skew(20deg);
+            display: inline-block;
+            transition: all 0s cubic-bezier(.25,.8,.25,1);  
+        }
         
     }
 }
+.bidvest-logo { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 65px;
+}
+
 
 // HEADER
 header,
@@ -131,3 +169,89 @@ footer {
 		}
 	}
 }
+
+//FORM VALIDATION 
+
+input:required, textarea:required {
+    border:2px solid #ec0f2b !important; 
+}
+
+.form-control {border-radius: 1px;}
+
+input[type=text],
+input[type=email],
+textarea {
+    border: none;
+    border-radius:1px;
+    padding: 5px;
+    width: 100%;
+    color:black;
+}
+label {
+    text-transform: uppercase;
+   
+    padding-bottom: 5px;
+    color:white;
+    font-size: 0.9em;
+    font-weight: bold;
+}
+.form-group.req  { 
+    position: relative;
+    label {
+        & + span {
+            position: absolute;
+            top: 63px;
+            right: 0px;
+            font-weight: bold;
+            color:white;           
+            background:#ec0f2b;
+            font-size:0.8em;
+            padding:0 3px;
+            border-radius: 3px;
+            margin:3px 0;
+           
+            
+            &:before {
+                content:'Required';
+            }
+            
+            &:after { 
+               content: "\f06a";
+                font-family: fontawesome;
+                font-weight: 600;
+                font-size: 18px;
+                position: absolute;
+                top: -38px;
+                right: 2px;
+                color: white;
+                background: #ec0f2b;
+                border: 1px solid #ec0f2b;
+                width: 30px;
+                height: 31px;
+                text-align: center;
+            }
+        } 
+    }
+}
+.form-group {margin:20px 0;}
+//PAGINATION
+
+.pagination { 
+    .page-link {
+        background: transparent;
+        border:0; 
+    }
+    .page-item.active { 
+        @extend .edge--skew; 
+        background:#4d4d4d;
+        & .page-link {
+            background: transparent;    
+        }
+    }   
+}
+
+
+//CHECKBOXES
+
+
+
